--- a/test.css
+++ b/test.css
@@ -2,11 +2,16 @@
     display: flex;
     border-bottom: 1px solid #000;
     padding-bottom: 10px;
+    padding-top: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
     font-size: 20px;
+    align-items: center;
 }
 .logo {
     margin-right: 50px;
     text-decoration: none;
+    padding: 5px 15px;
 }
 ul {
     display: flex;
@@ -15,7 +20,7 @@ ul {
     margin: 0;
 }
 ul > li {
-    margin-right: 10px;
+    margin-right: 30px;
 }
 .box {
     display: flex;
@@ -24,8 +29,8 @@ ul > li {
     border-bottom: 1px solid #000;
 }
 .aside {
-    border-right: 1px solid #000;
-    padding-right: 20px;
+    color: lavender;
+    padding: 10px 20px;
 }
 .post {
     padding-bottom: 20px;
@@ -34,28 +39,35 @@ body {
     font-family: 'Roboto', sans-serif;
     line-height: 1.5;
 }
+a {
+    color: rebeccapurple;
+    text-decoration: none;
+    font-weight: 700;
+}
 footer {
     font-size: 13px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 .logo {
     color:lightgreen;
     background-color:rebeccapurple;
     font-weight: 700;
 }
-.A {
-    color: rebeccapurple;
-    font-weight: 700;
-    text-decoration: none;
-}
 .h1 {
     text-transform: uppercase;
     letter-spacing: 0.5px;
-}
+    }
 .h2 {
     text-transform: uppercase;
     letter-spacing: 0.5px;
-}
+    }
 .h3 {
     text-transform: uppercase;
     letter-spacing: 0.5px;
+}
+section {
+    color: lavender;
+    padding: 5px 20px;
+    margin-bottom: 20px;
 }
