--- a/css/test.css
+++ b/css/test.css
@@ -62,3 +62,18 @@ section {
     padding: 5px 20px;
     margin-bottom: 20px;
 }
+.link {
+    background-color: rebeccapurple;
+    color: white;
+    padding: 8px 15px;
+    margin-left: 10px;
+}
+.text {
+    background-color: red;
+    color: white;
+    padding: 8px 15px;
+    margin-left: 10px;
+}
+.to li:nth-child(4) {
+    margin-right: 0;
+}
