--- a/css/test.css
+++ b/css/test.css
@@ -74,6 +74,6 @@ section {
     padding: 8px 15px;
     margin-left: 10px;
 }
-.to li:nth-child(4) {
+.todo li:nth-child(4) {
     margin-right: 0;
 }
